2001-07-07  John Kirkland <jpk@bl.org>

	* Added a click counter to photos and albums.  This feature
	  uses session cookies to determine if you have viewed a particular
	  album or photo during a given browser session.  If you have not,
	  gallery will increment a click counter and display the results
	  in the view_album.php and albums.php screens.  Admin functions
	  exist at an album level to enable the viewing of click counts 
	  and to reset click counts back to zero.

2001-07-06  John Kirkland <jpk@bl.org>

	* Bumped Gallery rev to 1.2-cvs

2001-07-05  Bharat Mediratta  <bharat@menalto.com>

	* Bumped Gallery rev to 1.1

2001-07-04  John Kirkland <jpk@bl.org>

	* Fixed some minor bugs in the move_album.php form.

	* Implemented 3 optimizations for moving photos between galaries:
		1.  if thumbnail exists and is correct size -- use it
		    instead of creating new one.
		2.  if resized image exists and is correct size --
		    use it instead of creating new one.
		3.  if the album highlight image is amongst the
		    images that are being moved, don't create a new
		    highlight image until all of the photos are moved.
	  Pre-optimization time:  81 seconds to move 11 images
	  Post-optimization time:  5 seconds to move 11 images

2001-07-03  Bharat Mediratta  <bharat@menalto.com>

	* Fixed the config wizard inside Nuke.

	* Made the name of the Nuke Gallery module a variable so that it
	  can be easily modified.  This makes it easier to have multiple
	  Galleries in a single Nuke site.

	* Fixed a compatibility issue that caused the setup wizard to lose
	  your settings when upgrading to v1.1

	* Fixed a bug that caused Gallery to fail under PHP 4.0RC1 and
	  verified that Gallery now works with this release.

2001-07-01  Chris Smith <chris@jacko.com>

	* Search pages now embed properly in nuke, just like
	  the other pages. Also tuned the look and feel of search.

2001-06-28  Bharat Mediratta  <bharat@menalto.com>
