@@ -2,6 +2,6 @@
 RewriteEngine On
 RewriteBase $GALLERY_URL/
 RewriteRule ^([^\.\?/]+)/([0-9]+)$	$GALLERY_URL/view_photo.php?set_albumName=$1${GALLERY_REWRITE_SEPARATOR}index=$2	[QSA]
-RewriteRule ^([^\.\?/]+)/([a-z\-]+)$	$GALLERY_URL/view_photo.php?set_albumName=$1${GALLERY_REWRITE_SEPARATOR}id=$2	[QSA]
+RewriteRule ^([^\.\?/]+)/([A-Za-z_0-9\-]+)$	$GALLERY_URL/view_photo.php?set_albumName=$1${GALLERY_REWRITE_SEPARATOR}id=$2	[QSA]
 RewriteRule ^([^\.\?/]+)$	$GALLERY_URL/view_album.php?set_albumName=$1	[QSA]
 </IfModule>
